# angular

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  WORKSPACE  index.bzl  karma-js.conf.js  package.json
.circleci/: config.yml
aio/: karma.conf.js  package.json
aio/tests/e2e/: protractor.conf.js
aio/tools/examples/shared/boilerplate/cli/: karma.conf.js
integration/: BUILD.bazel  angular_integration_test.bzl  run_tests.sh
integration/bazel/: BUILD.bazel  WORKSPACE  package.json
integration/bazel-schematics/: test.sh
integration/bazel/src/: BUILD.bazel  app.module.ts
integration/bazel/src/hello-world/: BUILD.bazel
integration/cli-hello-world/: README.md  karma.conf.js  package.json
integration/cli-hello-world-ivy-compat/: README.md  karma.conf.js  package.json
integration/cli-hello-world-ivy-compat/e2e/: protractor.conf.js
integration/cli-hello-world-ivy-i18n/: karma.conf.js  package.json
integration/cli-hello-world-ivy-i18n/e2e/: protractor.conf.js
integration/cli-hello-world-ivy-minimal/: README.md  karma.conf.js  package.json
integration/cli-hello-world-ivy-minimal/e2e/: protractor.conf.js
integration/cli-hello-world-lazy/: karma.conf.js  package.json
integration/cli-hello-world-lazy-rollup/: karma.conf.js  package.json
integration/cli-hello-world-lazy-rollup/e2e/: protractor.conf.js
integration/cli-hello-world-lazy/e2e/: protractor.conf.js
integration/cli-hello-world/e2e/: protractor.conf.js
integration/cli-hello-world/patches/: @angular-devkit+build-angular+0.900.0-rc.3.patch
integration/dynamic-compiler/e2e/: browser.config.json  protractor.config.js
integration/hello_world__closure/: package.json
integration/hello_world__closure/e2e/: browser.config.json  protractor.config.js
integration/hello_world__systemjs_umd/: bs-config.e2e.json  package.json  protractor.config.js
integration/i18n/: package.json
integration/i18n/e2e/: browser.config.json  protractor.config.js
integration/ivy-i18n/: README.md  karma.conf.js  package.json
integration/ivy-i18n/e2e/: protractor.conf.js
integration/ng_elements/: package.json
integration/ng_elements/e2e/: browser.config.json  protractor.config.js
integration/ng_update_migrations/: karma.conf.js
integration/ngcc/: package.json
integration/platform-server/: package.json
integration/platform-server/e2e/: protractor.config.js
integration/platform-server/src/: server.ts
integration/typings_test_ts36/: tsconfig.json
modules/: types.d.ts
modules/benchmarks/src/largeform/ng2/: BUILD.bazel
modules/benchmarks/src/largetable/ng2/: BUILD.bazel
modules/benchmarks/src/largetable/ng2_switch/: BUILD.bazel
modules/benchmarks/src/largetable/render3/: BUILD.bazel
modules/benchmarks/src/tree/ng2/: BUILD.bazel
modules/benchmarks/src/tree/ng2_static/: BUILD.bazel
modules/benchmarks/src/tree/ng2_switch/: BUILD.bazel
modules/playground/src/animate/: BUILD.bazel
modules/playground/src/async/: BUILD.bazel
modules/playground/src/gestures/: BUILD.bazel
modules/playground/src/hello_world/: BUILD.bazel
modules/playground/src/http/: BUILD.bazel
modules/playground/src/jsonp/: BUILD.bazel
modules/playground/src/key_events/: BUILD.bazel
modules/playground/src/model_driven_forms/: BUILD.bazel
modules/playground/src/order_management/: BUILD.bazel
modules/playground/src/person_management/: BUILD.bazel
modules/playground/src/relative_assets/: BUILD.bazel
modules/playground/src/sourcemap/: BUILD.bazel
modules/playground/src/svg/: BUILD.bazel
modules/playground/src/template_driven_forms/: BUILD.bazel
modules/playground/src/todo/: BUILD.bazel
modules/playground/src/upgrade/: BUILD.bazel
modules/playground/src/zippy_component/: BUILD.bazel
scripts/saucelabs/: sauce-service.sh
tools/: BUILD.bazel  defaults.bzl  ng_rollup_bundle.config.js  ng_setup_workspace.bzl  npm_package_archives.bzl  rules_nodejs_linker.patch
tools/npm_integration_test/: BUILD.bazel  npm_integration_test.bzl  test_runner.js
