load("//tools/npm_integration_test:npm_integration_test.bzl", "angular_integration_test")

filegroup(
    name = "cli_hello_world_files",
    srcs = glob(
        include = ["cli-hello-world/**"],
        exclude = ["cli-hello-world/node_modules/**"],
    ),
)

angular_integration_test(
    name = "cli_hello_world_test",
    commands = [
        "$(location @nodejs//:yarn_bin) install",
        "$(location @nodejs//:yarn_bin) test",
    ],
    # CI_CHROMEDRIVER_VERSION_ARG is used in post-install to configure
    # which version of chrome driver webdriver-manager downloads. The version
    # specified should work with your local chrome version.
    # --action_env=CI_CHROMEDRIVER_VERSION_ARG is set in .bazelrc so that the
    # test can access this envirnoment variable if it is set. Alternately,
    # if you can set or override the value used by the test with a --define such as
    # --define=CI_CHROMEDRIVER_VERSION_ARG="--versions.chrome 78.0.3904.105"
    configuration_env_vars = ["CI_CHROMEDRIVER_VERSION_ARG"],
    data = [
        "@nodejs//:yarn_bin",
        "@nodejs//:yarn_files",
    ],
    npm_packages = {
        "//packages/animations:npm_package": "@angular/animations",
        "//packages/common:npm_package": "@angular/common",
        "//packages/compiler:npm_package": "@angular/compiler",
        "//packages/compiler-cli:npm_package": "@angular/compiler-cli",
        "//packages/core:npm_package": "@angular/core",
        "//packages/forms:npm_package": "@angular/forms",
        "//packages/language-service:npm_package": "@angular/language-service",
        "//packages/platform-browser:npm_package": "@angular/platform-browser",
        "//packages/platform-browser-dynamic:npm_package": "@angular/platform-browser-dynamic",
        "//packages/router:npm_package": "@angular/router",
        "//packages/zone.js:npm_package": "zone.js",
        "@npm//typescript": "typescript",
        "@npm//rxjs": "rxjs",
        "@npm//tslib": "tslib",
        "@npm//protractor": "protractor",
        "@npm//@angular/cli": "@angular/cli",
        "@npm//@types/node": "@types/node",
    },
    test_files = ":cli_hello_world_files",
)
