load(":angular_integration_test.bzl", "angular_integration_test")

[
    angular_integration_test(
        name = test_folder + "_test",
        test_folder = test_folder,
    )
    for test_folder in [
        "cli-hello-world",
        "cli-hello-world-ivy-compat",
        "cli-hello-world-ivy-i18n",
        "cli-hello-world-ivy-minimal",
        "cli-hello-world-lazy",
        "cli-hello-world-lazy-rollup",
        "dynamic-compiler",
        "hello_world__closure",
        "hello_world__systemjs_umd",
        "i18n",
        "injectable-def",
        "ivy-i18n",
        "language_service_plugin",
        "ng_elements",
        "ng_update",
        "ng_update_migrations",
        "ngcc",
        "platform-server",
        "service-worker-schema",
        "side-effects",
        "terser",
    ]
]

# Special case for `typings_test_ts36` test as we want to freeze
# `typescript` at version 3.6.x for that test.
angular_integration_test(
    name = "typings_test_ts36_test",
    freeze_npm_packages = ["typescript"],
    test_folder = "typings_test_ts36",
)
