load("//tools:defaults.bzl", "ng_module", "ts_devserver")

package(default_visibility = ["//modules/playground:__subpackages__"])

ng_module(
    name = "animate",
    srcs = glob(["**/*.ts"]),
    assets = glob(["**/*.css"]),
    tsconfig = "//modules/playground:tsconfig-build.json",
    # TODO: FW-1004 Type checking is currently not complete.
    type_check = False,
    deps = [
        "//packages/animations",
        "//packages/core",
        "//packages/platform-browser-dynamic",
        "//packages/platform-browser/animations",
    ],
)

ts_devserver(
    name = "devserver",
    entry_module = "angular/modules/playground/src/animate/index",
    index_html = "index.html",
    deps = [":animate"],
)
