load("//tools:defaults.bzl", "ng_module", "ts_devserver")

package(default_visibility = ["//modules/playground:__subpackages__"])

ng_module(
    name = "gestures",
    srcs = glob(["**/*.ts"]),
    assets = ["template.html"],
    tsconfig = "//modules/playground:tsconfig-build.json",
    # TODO: FW-1004 Type checking is currently not complete.
    type_check = False,
    deps = [
        "//packages/core",
        "//packages/platform-browser",
        "//packages/platform-browser-dynamic",
        "@ngdeps//@types/hammerjs",
    ],
)

ts_devserver(
    name = "devserver",
    entry_module = "angular/modules/playground/src/gestures/index",
    index_html = "index.html",
    static_files = [
        "@ngdeps//node_modules/hammerjs:hammer.js",
    ],
    deps = [":gestures"],
)
