load("//tools:defaults.bzl", "ng_module", "ts_devserver")

package(default_visibility = ["//modules/playground:__subpackages__"])

ng_module(
    name = "http",
    srcs = glob(["**/*.ts"]),
    tsconfig = "//modules/playground:tsconfig-build.json",
    # TODO: FW-1004 Type checking is currently not complete.
    type_check = False,
    deps = [
        "//packages/core",
        "//packages/http",
        "//packages/platform-browser",
        "//packages/platform-browser-dynamic",
        "@ngdeps//rxjs",
    ],
)

ts_devserver(
    name = "devserver",
    data = ["people.json"],
    entry_module = "angular/modules/playground/src/http/index",
    index_html = "index.html",
    deps = [":http"],
)
