load("//tools:defaults.bzl", "ng_module", "ts_devserver")

package(default_visibility = ["//modules/playground:__subpackages__"])

ng_module(
    name = "key_events",
    srcs = glob(["**/*.ts"]),
    tsconfig = "//modules/playground:tsconfig-build.json",
    # TODO: FW-1004 Type checking is currently not complete.
    type_check = False,
    deps = [
        "//packages/core",
        "//packages/platform-browser",
        "//packages/platform-browser-dynamic",
    ],
)

ts_devserver(
    name = "devserver",
    entry_module = "angular/modules/playground/src/key_events/index",
    index_html = "index.html",
    deps = [":key_events"],
)
