load("//tools:defaults.bzl", "ng_module", "ts_devserver")

package(default_visibility = ["//modules/playground:__subpackages__"])

ng_module(
    name = "relative_assets",
    srcs = glob(["**/*.ts"]),
    # This example demonstrates how external resources can be loaded relatively, so we
    # need to disable resource inlining.
    inline_resources = False,
    tsconfig = "//modules/playground:tsconfig-build.json",
    # TODO: FW-1004 Type checking is currently not complete.
    type_check = False,
    deps = [
        "//packages/core",
        "//packages/platform-browser",
        "//packages/platform-browser-dynamic",
        # Needed because the example uses "module.id" in order to load assets relatively.
        "@ngdeps//@types/node",
    ],
)

ts_devserver(
    name = "devserver",
    data = [
        "app/style.css",
        "app/tpl.html",
    ],
    entry_module = "angular/modules/playground/src/relative_assets/index",
    index_html = "index.html",
    deps = [":relative_assets"],
)
