load("//tools:defaults.bzl", "ng_module", "ts_devserver")

package(default_visibility = ["//modules/playground:__subpackages__"])

# Exported since the e2e test needs to read the source file in order to
# ensure that the source map properly maps back to the source file.
exports_files(["index.ts"])

ng_module(
    name = "sourcemap",
    srcs = glob(["**/*.ts"]),
    tsconfig = "//modules/playground:tsconfig-build.json",
    # TODO: FW-1004 Type checking is currently not complete.
    type_check = False,
    deps = [
        "//packages/core",
        "//packages/platform-browser",
        "//packages/platform-browser-dynamic",
    ],
)

ts_devserver(
    name = "devserver",
    entry_module = "angular/modules/playground/src/sourcemap/index",
    index_html = "index.html",
    deps = [":sourcemap"],
)
