load("//tools:defaults.bzl", "ng_module", "ts_devserver")
load("//modules/benchmarks:benchmark_test.bzl", "benchmark_test")

package(default_visibility = ["//modules/benchmarks:__subpackages__"])

# Note that this benchmark has been designed for Angular with ViewEngine, but once
# ViewEngine is removed, we should should consider removing this one since there
# already is a "render3" benchmark.
ng_module(
    name = "ng2",
    srcs = glob(["*.ts"]),
    tsconfig = "//modules/benchmarks:tsconfig-build.json",
    # TODO: FW-1004 Type checking is currently not complete.
    type_check = False,
    deps = [
        "//modules/benchmarks/src:util_lib",
        "//modules/benchmarks/src/largetable:util_lib",
        "//packages/core",
        "//packages/platform-browser",
        "//packages/platform-browser-dynamic",
    ],
)

ts_devserver(
    name = "devserver",
    entry_module = "angular/modules/benchmarks/src/largetable/ng2/index",
    index_html = "index.html",
    deps = [":ng2"],
)

benchmark_test(
    name = "perf",
    server = ":devserver",
    deps = ["//modules/benchmarks/src/largetable:perf_lib"],
)
